Updates to Celebrates page"

--- a/src/pages/library.html
+++ b/src/pages/library.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 
-<head xmlns:media="http://search.yahoo.com/mrss/">
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <head>
