Attempt at Webpack 4

--- a/src/pages/celebrates.html
+++ b/src/pages/celebrates.html
@@ -9,7 +9,7 @@
 
 <body>
   <!-- Southern Header -->
-<script>
+  <!-- <script>
     (function(d, t, id) {
       var js, mmjs = d.getElementsByTagName(t)[0];
       if (d.getElementById(id)) return;
@@ -19,7 +19,7 @@
       js.async = 'async';
       mmjs.parentNode.insertBefore(js, mmjs);
     }(document, 'script', 'southern-mmenu'));
-  </script>
+  </script> -->
   <!-- End Southern Header -->
   <div id="app">
 
